# blog

./: .dockerignore  .env.sample  .gitignore  .gitmodules  .pre-commit-config.yaml  Makefile  README.md  wrangler.toml
.config/: .markdown-lint.yml
.github/: LICENSE  dependabot.yml
.github/instructions/: blog.instructions.md
.github/workflows/: automerge.yml  branch.yml  cron.yml  deploy.yml  dtrack.yml  main.yml  pr.yml  sbom.yml
conf/: .gitignore  README.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  slidev-workspace.yaml
conf/owasp/: pre-commit.md
conf/slides/1-template/: slides.md
conf/slides/2025-11-12/: package.json
conf/slides/2026-03-12/: slides.md
conf/slides/mythos/: docs.md  slides.md
conf/slides/pre-commit/fr/: slides.md
conf/slides/sbom/en/: package.json  slides.md
conf/slides/sbom/fr/: slides.md
docker/: Dockerfile  compose.yml  nginx.conf
docs/: DEPLOYMENT.md  Dockerfile  hugo.toml
docs/config/_default/: hugo.toml  languages.en.toml  menus.en.toml  params.toml
docs/content/authors/irish1986/: _index.md
docs/content/devsecops/: test.md
docs/content/homelab/: homelab.md
docs/content/projects/: _index.md
docs/data/authors/: bot.json  irish1986.json
docs/layouts/projects/: list.html
docs/layouts/shortcodes/: github-content.html
docs/legacy/e2e-project/: index.md
docs/static/: CNAME
scripts/: pyproject.toml
scripts/src/: main.py
scripts/tests/: test_main.py
src/docker/: Dockerfile
talk/owasp/: sbom.md
talk/slidev/slidev/: package-lock.json  package.json  slides.md
(+83 files in other folders)
